# triton-tnn-backend

./: CMakeLists.txt  README.md  backend_common.cc  build.sh  comp.sh  smartbuild.sh
cmake/: TritonTnnBackendConfig.cmake.in
my_models/newtest/: config.pbtxt
src/: TNNProcessor.cc  TNNProcessor.h  tnn.cc
tnnserving_client/: auto-run.sh  image_client.py
